protocols/tests/adders/adder_d0/expects/illegal_assignment.interp.add_d0.expect
error: Output 'DUT.s' depends on input(s) 'b', 'a' which do not have assigned values ('b', 'a' initialized to DontCare and were never assigned a concrete value)
   ┌─ protocols/tests/adders/adder_d0/add_d0.prot:30:7
   │
30 │   if (DUT.s == 32'b0) {
   │       ^^^^^ Output 'DUT.s' depends on input(s) 'b', 'a' which do not have assigned values ('b', 'a' initialized to DontCare and were never assigned a concrete value)

Trace 0 execution failed.
---CODE---
101
